# Design-and-Optimization-of-the-RAFT-Accelerator-ZYNQ

./: README.md
RAFT_impl/: CMakeLists.txt  convolution.cpp  corr.cpp  corr_index.cpp  data_trans.cpp  fsm.cpp  gitignore  main.cpp
RAFT_impl/doc/: RAFT.drawio
RAFT_impl/grid_sample/: CMakeLists.txt  corr_index_buffer.cpp  corr_index_buffer_predict.cpp  grid_sample_test.cpp
RAFT_impl/include/: common_datatype.hpp  convolution.hpp  corr.hpp  fsm.hpp  log.hpp
RAFT_impl/script/: addr_cal.py  inthex_to_half.py  ucodeTemplate.py
RAFT_impl/script/config/: regularSeqConfig.py  regularSheduleConfig.py  split3x3SeqConfig.py  split3x3SheduleConfig.py
RAFT_impl/script/sd/: addr_gen.py  code_gen.py  file_gen.py  rgb_fileshow.py
RAFT_impl/testbench/: log.cpp  main.cpp
RAFT_quantize/: demo.py  evaluate.py  gemmini_gen.py  gitignore  onnx_model.onnx  onnx_parser.py  prediction.py  raft-chairs.pth  test.py  train.py
RAFT_quantize/core/: corr.py  datasets.py  extractor.py  raft.py  update.py
RAFT_quantize/core/utils/: utils.py
RAFT_quantize/demo-frames/gemmini/: gemminiText.py  raft.template.c  raft.template.h
